StorageException refactoring, add start/stop to persistence, remove embedded